# MobiusCode

./: .gitignore  CMakeLists.txt  MobiusCode.ods  colour.cpp  colour.hpp  definitions.hpp  looooop.mc  main.cpp  newline.mc  program.cpp  program.hpp  tape.hpp  vec2.hpp
helper/: main.cpp
shared/: vec2.hpp
src/: colour.cpp  colour.hpp  endian.hpp  main.cpp  program.cpp  program.hpp  tape.cpp  tape.hpp
